P2Pmsgcore/native/P2Pmsgcore_c.h

typedef void* P2PeerMsgHandle;
P2PC_API P2PeerMsgHandle  p2peermsg_create_full    (const wchar_t* src,
                                                     const wchar_t* dst,
                                                     const wchar_t* msgID,
                                                     const void*    data,
                                                     unsigned short dataSize);
P2PC_API P2PeerMsgHandle  p2peermsg_create_msgid   (const wchar_t* msgID);
P2PC_API void             p2peermsg_destroy        (P2PeerMsgHandle h);
P2PC_API const wchar_t*   p2peermsg_get_source     (P2PeerMsgHandle h);
P2PC_API void             p2peermsg_set_source     (P2PeerMsgHandle h, const wchar_t* src);
P2PC_API const wchar_t*   p2peermsg_get_destin     (P2PeerMsgHandle h);
P2PC_API void             p2peermsg_set_destin     (P2PeerMsgHandle h, const wchar_t* dst);
P2PC_API const wchar_t*   p2peermsg_c_name         (P2PeerMsgHandle h);