P2Pmsgcore/java/src/main/java/com/p2pmsgcore/native_/P2Pmsgcore_c.java


    /**
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create_full(const wchar_t *src, const wchar_t *dst, const wchar_t *msgID, const void *data, unsigned short dataSize)
     * }
     */
    public static MemorySegment p2peermsg_create_full(MemorySegment src, MemorySegment dst, MemorySegment msgID, MemorySegment data, short dataSize) {
        var mh$ = p2peermsg_create_full.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_create_full", src, dst, msgID, data, dataSize);
            }
            return (MemorySegment)mh$.invokeExact(src, dst, msgID, data, dataSize);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_create_msgid {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_create_msgid").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create_msgid(const wchar_t *msgID)
     * }
     */
    public static FunctionDescriptor p2peermsg_create_msgid$descriptor() {
        return p2peermsg_create_msgid.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create_msgid(const wchar_t *msgID)
     * }
     */
    public static MethodHandle p2peermsg_create_msgid$handle() {
        return p2peermsg_create_msgid.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create_msgid(const wchar_t *msgID)
     * }
     */
    public static MemorySegment p2peermsg_create_msgid$address() {
        return p2peermsg_create_msgid.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_create_msgid(const wchar_t *msgID)
     * }
     */
    public static MemorySegment p2peermsg_create_msgid(MemorySegment msgID) {
        var mh$ = p2peermsg_create_msgid.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_create_msgid", msgID);
            }
            return (MemorySegment)mh$.invokeExact(msgID);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_destroy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peermsg_destroy(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_destroy$descriptor() {
        return p2peermsg_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peermsg_destroy(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_destroy$handle() {
        return p2peermsg_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peermsg_destroy(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_destroy$address() {
        return p2peermsg_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2peermsg_destroy(P2PeerMsgHandle h)
     * }
     */
    public static void p2peermsg_destroy(MemorySegment h) {
        var mh$ = p2peermsg_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_destroy", h);
            }
            mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_get_source {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_get_source").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_get_source(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_get_source$descriptor() {
        return p2peermsg_get_source.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_get_source(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_get_source$handle() {
        return p2peermsg_get_source.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_get_source(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_get_source$address() {
        return p2peermsg_get_source.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_get_source(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_get_source(MemorySegment h) {
        var mh$ = p2peermsg_get_source.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_get_source", h);
            }
            return (MemorySegment)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_set_source {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_set_source").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peermsg_set_source(P2PeerMsgHandle h, const wchar_t *src)
     * }
     */
    public static FunctionDescriptor p2peermsg_set_source$descriptor() {
        return p2peermsg_set_source.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peermsg_set_source(P2PeerMsgHandle h, const wchar_t *src)
     * }
     */
    public static MethodHandle p2peermsg_set_source$handle() {
        return p2peermsg_set_source.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peermsg_set_source(P2PeerMsgHandle h, const wchar_t *src)
     * }
     */
    public static MemorySegment p2peermsg_set_source$address() {
        return p2peermsg_set_source.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2peermsg_set_source(P2PeerMsgHandle h, const wchar_t *src)
     * }
     */
    public static void p2peermsg_set_source(MemorySegment h, MemorySegment src) {
        var mh$ = p2peermsg_set_source.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_set_source", h, src);
            }
            mh$.invokeExact(h, src);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_get_destin {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_get_destin").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_get_destin(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_get_destin$descriptor() {
        return p2peermsg_get_destin.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_get_destin(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_get_destin$handle() {
        return p2peermsg_get_destin.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_get_destin(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_get_destin$address() {
        return p2peermsg_get_destin.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const wchar_t *p2peermsg_get_destin(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_get_destin(MemorySegment h) {
        var mh$ = p2peermsg_get_destin.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_get_destin", h);
            }
            return (MemorySegment)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_set_destin {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_set_destin").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peermsg_set_destin(P2PeerMsgHandle h, const wchar_t *dst)
     * }
     */
    public static FunctionDescriptor p2peermsg_set_destin$descriptor() {
        return p2peermsg_set_destin.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peermsg_set_destin(P2PeerMsgHandle h, const wchar_t *dst)
     * }
     */
    public static MethodHandle p2peermsg_set_destin$handle() {
        return p2peermsg_set_destin.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peermsg_set_destin(P2PeerMsgHandle h, const wchar_t *dst)
     * }
     */
    public static MemorySegment p2peermsg_set_destin$address() {
        return p2peermsg_set_destin.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2peermsg_set_destin(P2PeerMsgHandle h, const wchar_t *dst)
     * }
     */
    public static void p2peermsg_set_destin(MemorySegment h, MemorySegment dst) {
        var mh$ = p2peermsg_set_destin.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_set_destin", h, dst);
            }
            mh$.invokeExact(h, dst);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_c_name {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_c_name").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
